--- a/Overseer/Overseer.csproj
+++ b/Overseer/Overseer.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>OneClickDesktop.Overseer</AssemblyName>
+    <RootNamespace>OneClickDesktop.Overseer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
