--- a/.github/workflows/overseer-build-test.yml
+++ b/.github/workflows/overseer-build-test.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.x'
+      # Tymczasowo dodanie lokalnych pakietow
+      - name: Add local packages
+        run: dotnet nuget add source Overseer/packages/
       - name: Build Overseer
         run: dotnet build
       - name: Run unit tests for Overseer
