--- a/.github/workflows/overseer-build-test.yml
+++ b/.github/workflows/overseer-build-test.yml
@@ -17,7 +17,7 @@ jobs:
           dotnet-version: '5.x'
       # Tymczasowo dodanie lokalnych pakietow
       - name: Add local packages
-        run: dotnet nuget add source ./Overseer/packages/
+        run: dotnet nuget add source /home/runner/work/overseer/overseer/Overseer/packages/
       - name: Restore packages  
         run: dotnet restore
       - name: Build Overseer
