Wstępna implementacja autoryzacji

--- a/Overseer/appsettings.json
+++ b/Overseer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "JwtSettings": {
+    "Secret":  "MySecretForJWTTokens?CHANGE IT LATER!!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
