Wstępna struktura klas modelu

--- a/Backend.Classes.Tests/Backend.Classes.Tests.csproj
+++ b/Backend.Classes.Tests/Backend.Classes.Tests.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Backend.Classes\Backend.Classes.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ModelTests\" />
+  </ItemGroup>
+
 </Project>
