Configuration file with overseer options

--- a/Overseer/appsettings.json
+++ b/Overseer/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OneClickDesktop": { //Configuration for OneClickDesktop system
+    "OverseerId": "overseer-test", //Overseer system-wide unique id
+    "RabbitMQHostname": "localhost", //Internal RabbitMQ broker access address
+    "RabbitMQPort": "5672", //Internal RabbitMQ broker access port
+    "SessionWaitingTimeout": "15", //Timeout in minutes for machine shoutdown after lossing connection with client
+    "ModelUpdateInterval":  "10" //Model requests to virtualization servers interval (in seconds)
+  }
 }
