--- a/Overseer/Overseer.csproj
+++ b/Overseer/Overseer.csproj
@@ -11,10 +11,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.12" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="6.0.0" />
     <PackageReference Include="NLog" Version="5.0.0-preview.3" />
     <PackageReference Include="OneClickDesktop.Api" Version="1.0.9" />
     <PackageReference Include="OneClickDesktop.BackendClasses" Version="1.0.8" />
-    <PackageReference Include="OneClickDesktop.RabbitModule.Overseer" Version="1.0.6" />
+    <PackageReference Include="OneClickDesktop.RabbitModule.Overseer" Version="1.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
