Shutdown parameters to configuration

--- a/Overseer/appsettings.ini
+++ b/Overseer/appsettings.ini
@@ -19,3 +19,7 @@ RabbitMQPort=5672
 SessionWaitingTimeout=15
 #Model requests to virtualization servers interval (in seconds)
 ModelUpdateInterval=10
+# Domain shutdown timeout period (in minutes)
+# DomainShutdownTimeout=15
+# Domain Shutdown interval checking - should be divider of DomainShutdownTimeout (in seconds)
+# DomainShutdownCounterInterval=30
