--- a/Overseer/config/appsettings.Production.ini
+++ b/Overseer/config/appsettings.Production.ini
@@ -12,7 +12,7 @@ Microsoft.Hosting.Lifetime=Information
 #Overseer system-wide unique id
 OverseerId=overseer-test
 #Internal RabbitMQ broker access address
-RabbitMQHostname=localhost
+RabbitMQHostname=10.0.9.91
 #Internal RabbitMQ broker access port
 RabbitMQPort=5672
 #Timeout in minutes for machine shoutdown after lossing connection with client
