Correct docker building process

--- a/Overseer/config/appsettings.Production.ini
+++ b/Overseer/config/appsettings.Production.ini
@@ -7,18 +7,18 @@ Default=Information
 Microsoft=Warning
 Microsoft.Hosting.Lifetime=Information
 
-#Configuration for OneClickDesktop system
+# Configuration for OneClickDesktop system
 [OneClickDesktop]
-#Overseer system-wide unique id
+# Overseer system-wide unique id
 OverseerId=overseer-test
-#Internal RabbitMQ broker access address
+# Internal RabbitMQ broker access address
 RabbitMQHostname=10.0.9.91
-#Internal RabbitMQ broker access port
+# Internal RabbitMQ broker access port
 RabbitMQPort=5672
-#Timeout in minutes for machine shoutdown after lossing connection with client
+# Timeout in minutes for machine shoutdown after lossing connection with client
 SessionWaitingTimeout=15
-#Model requests to virtualization servers interval (in seconds)
-ModelUpdateInterval=10
+# Model requests to virtualization servers interval (in seconds)
+# ModelUpdateInterval=60
 # Domain shutdown timeout period (in minutes)
 # DomainShutdownTimeout=15
 # Domain Shutdown interval checking - should be divider of DomainShutdownTimeout (in seconds)
