Serving human-readable machines to client

--- a/Overseer/config/appsettings.Development.ini
+++ b/Overseer/config/appsettings.Development.ini
@@ -11,13 +11,13 @@ Microsoft.Hosting.Lifetime=Information
 #Configuration for OneClickDesktop system
 [OneClickDesktop]
 #Overseer system-wide unique id
-OverseerId=overseer-test
+OverseerId=overseer-debug
 #Internal RabbitMQ broker access address
 RabbitMQHostname=localhost
 #Internal RabbitMQ broker access port
 RabbitMQPort=5672
 #Timeout in minutes for machine shoutdown after lossing connection with client
-SessionWaitingTimeout=15
+SessionWaitingTimeout=5
 #Model requests to virtualization servers interval (in seconds)
 ModelUpdateInterval=10
 # Domain shutdown timeout period (in minutes)
