--- a/Overseer/config/appsettings.Production.ini
+++ b/Overseer/config/appsettings.Production.ini
@@ -1,5 +1,9 @@
 AllowedHosts=*
-urls=http://*:5000
+urls=http://*:5000;https://*:5001
+
+[Kestrel:Certificates:Default]
+Password=password
+Path=/overseer/overseer.pfx
 
 [JwtSettings]
 Secret=MySecretForJWTTokens?CHANGE IT LATER!!
@@ -13,7 +17,7 @@ Microsoft.Hosting.Lifetime=Information
 # Overseer system-wide unique id
 OverseerId=overseer-test
 # Internal RabbitMQ broker access address
-RabbitMQHostname=10.0.9.91
+RabbitMQHostname=192.168.0.73
 # Internal RabbitMQ broker access port
 RabbitMQPort=5672
 # Timeout in minutes for machine shoutdown after lossing connection with client
