--- a/Overseer/config/appsettings.Production.ini
+++ b/Overseer/config/appsettings.Production.ini
@@ -15,16 +15,14 @@ Microsoft.Hosting.Lifetime=Information
 # Configuration for OneClickDesktop system
 [OneClickDesktop]
 # Overseer system-wide unique id
-OverseerId=overseer-test
+# OverseerId=overseer-test
 # Internal RabbitMQ broker access address
-RabbitMQHostname=192.168.0.73
+# RabbitMQHostname=localhost
 # Internal RabbitMQ broker access port
-RabbitMQPort=5672
-# Timeout in minutes for machine shoutdown after lossing connection with client
-SessionWaitingTimeout=15
+# RabbitMQPort=5672
 # Model requests to virtualization servers interval (in seconds)
 # ModelUpdateInterval=60
-# Domain shutdown timeout period (in minutes)
+# Timeout in minutes for machine shoutdown after lossing connection with client
 # DomainShutdownTimeout=15
 # Domain Shutdown interval checking - should be divider of DomainShutdownTimeout (in seconds)
 # DomainShutdownCounterInterval=30
